Some more porting work

--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -49,14 +49,14 @@
     <Compile Include="Analysis\Compound\DictionaryCompoundWordTokenFilterFactory.cs" />
     <Compile Include="Analysis\Compound\HyphenationCompoundWordTokenFilter.cs" />
     <Compile Include="Analysis\Compound\HyphenationCompoundWordTokenFilterFactory.cs" />
-    <Compile Include="Analysis\Compound\hyphenation\ByteVector.cs" />
-    <Compile Include="Analysis\Compound\hyphenation\CharVector.cs" />
-    <Compile Include="Analysis\Compound\hyphenation\Hyphen.cs" />
-    <Compile Include="Analysis\Compound\hyphenation\Hyphenation.cs" />
-    <Compile Include="Analysis\Compound\hyphenation\HyphenationTree.cs" />
-    <Compile Include="Analysis\Compound\hyphenation\PatternConsumer.cs" />
-    <Compile Include="Analysis\Compound\hyphenation\PatternParser.cs" />
-    <Compile Include="Analysis\Compound\hyphenation\TernaryTree.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\ByteVector.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\CharVector.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\Hyphen.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\Hyphenation.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\HyphenationTree.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\PatternConsumer.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\PatternParser.cs" />
+    <Compile Include="Analysis\Compound\Hyphenation\TernaryTree.cs" />
     <Compile Include="Analysis\Core\KeywordAnalyzer.cs" />
     <Compile Include="Analysis\Core\KeywordTokenizer.cs" />
     <Compile Include="Analysis\Core\KeywordTokenizerFactory.cs" />
