--- a/src/Lucene.Net.Tests.Queries/Lucene.Net.Tests.Queries.csproj
+++ b/src/Lucene.Net.Tests.Queries/Lucene.Net.Tests.Queries.csproj
@@ -46,8 +46,19 @@
     <Compile Include="BoostingQueryTest.cs" />
     <Compile Include="ChainedFilterTest.cs" />
     <Compile Include="CommonTermsQueryTest.cs" />
+    <Compile Include="Function\FunctionTestSetup.cs" />
+    <Compile Include="Function\TestBoostedQuery.cs" />
+    <Compile Include="Function\TestDocValuesFieldSources.cs" />
+    <Compile Include="Function\TestFieldScoreQuery.cs" />
+    <Compile Include="Function\TestFunctionQuerySort.cs" />
+    <Compile Include="Function\TestLongNormValueSource.cs" />
+    <Compile Include="Function\TestOrdValues.cs" />
+    <Compile Include="Function\TestValueSources.cs" />
+    <Compile Include="Mlt\TestMoreLikeThis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TermFilterTest.cs" />
+    <Compile Include="TermsFilterTest.cs" />
+    <Compile Include="TestCustomScoreQuery.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lucene.Net.Core\Lucene.Net.csproj">
@@ -66,10 +77,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Function\" />
-    <Folder Include="Mlt\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
