--- a/Lucene.Net.Tests.Join/Lucene.Net.Tests.Join.csproj
+++ b/Lucene.Net.Tests.Join/Lucene.Net.Tests.Join.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E8A339C7-FCF6-4A72-8586-56D8961D7B99}</ProjectGuid>
+    <ProjectGuid>{1866F8E4-ABF5-4CBE-B23B-4BADF6CD20DC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Lucene.Net.Join</RootNamespace>
-    <AssemblyName>Lucene.Net.Join</AssemblyName>
+    <RootNamespace>Lucene.Net.Tests.Join</RootNamespace>
+    <AssemblyName>Lucene.Net.Tests.Join</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,27 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FakeScorer.cs" />
-    <Compile Include="FixedBitSetCachingWrapperFilter.cs" />
-    <Compile Include="JoinUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScoreMode.cs" />
-    <Compile Include="TermsCollector.cs" />
-    <Compile Include="TermsIncludingScoreQuery.cs" />
-    <Compile Include="TermsQuery.cs" />
-    <Compile Include="TermsWithScoreCollector.cs" />
-    <Compile Include="ToChildBlockJoinQuery.cs" />
-    <Compile Include="ToParentBlockJoinCollector.cs" />
-    <Compile Include="ToParentBlockJoinFieldComparator.cs" />
-    <Compile Include="ToParentBlockJoinQuery.cs" />
+    <Compile Include="TestBlockJoin.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Lucene.Net.Grouping\Lucene.Net.Grouping.csproj">
-      <Project>{02BAB603-067D-48B1-AEDD-316849652568}</Project>
-      <Name>Lucene.Net.Grouping</Name>
+    <ProjectReference Include="..\Lucene.Net.Join\Lucene.Net.Join.csproj">
+      <Project>{e8a339c7-fcf6-4a72-8586-56d8961d7b99}</Project>
+      <Name>Lucene.Net.Join</Name>
     </ProjectReference>
     <ProjectReference Include="..\src\Lucene.Net.Core\Lucene.Net.csproj">
-      <Project>{5D4AD9BE-1FFB-41AB-9943-25737971BF57}</Project>
+      <Project>{5d4ad9be-1ffb-41ab-9943-25737971bf57}</Project>
       <Name>Lucene.Net</Name>
     </ProjectReference>
   </ItemGroup>
