--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -35,193 +35,9 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Analysis\CharFilter\BaseCharFilter.cs" />
-    <Compile Include="Analysis\CharFilter\HTMLStripCharFilterFactory.cs" />
-    <Compile Include="Analysis\CharFilter\MappingCharFilter.cs" />
-    <Compile Include="Analysis\CharFilter\MappingCharFilterFactory.cs" />
-    <Compile Include="Analysis\CharFilter\NormalizeCharMap.cs" />
-    <Compile Include="Analysis\CommonGrams\CommonGramsFilter.cs" />
-    <Compile Include="Analysis\CommonGrams\CommonGramsFilterFactory.cs" />
-    <Compile Include="Analysis\CommonGrams\CommonGramsQueryFilter.cs" />
-    <Compile Include="Analysis\CommonGrams\CommonGramsQueryFilterFactory.cs" />
-    <Compile Include="Analysis\Compound\CompoundWordTokenFilterBase.cs" />
-    <Compile Include="Analysis\Compound\DictionaryCompoundWordTokenFilter.cs" />
-    <Compile Include="Analysis\Compound\DictionaryCompoundWordTokenFilterFactory.cs" />
-    <Compile Include="Analysis\Compound\HyphenationCompoundWordTokenFilter.cs" />
-    <Compile Include="Analysis\Compound\HyphenationCompoundWordTokenFilterFactory.cs" />
-    <Compile Include="Analysis\Compound\Hyphenation\ByteVector.cs" />
-    <Compile Include="Analysis\Compound\Hyphenation\CharVector.cs" />
-    <Compile Include="Analysis\Compound\Hyphenation\Hyphen.cs" />
-    <Compile Include="Analysis\Compound\Hyphenation\Hyphenation.cs" />
-    <Compile Include="Analysis\Compound\Hyphenation\HyphenationTree.cs" />
-    <Compile Include="Analysis\Compound\Hyphenation\PatternConsumer.cs" />
-    <Compile Include="Analysis\Compound\Hyphenation\PatternParser.cs" />
-    <Compile Include="Analysis\Compound\Hyphenation\TernaryTree.cs" />
-    <Compile Include="Analysis\Core\KeywordAnalyzer.cs" />
-    <Compile Include="Analysis\Core\KeywordTokenizer.cs" />
-    <Compile Include="Analysis\Core\KeywordTokenizerFactory.cs" />
-    <Compile Include="Analysis\Core\LetterTokenizer.cs" />
-    <Compile Include="Analysis\Core\LetterTokenizerFactory.cs" />
-    <Compile Include="Analysis\Core\LowerCaseFilter.cs" />
-    <Compile Include="Analysis\Core\LowerCaseFilterFactory.cs" />
-    <Compile Include="Analysis\Core\LowerCaseTokenizer.cs" />
-    <Compile Include="Analysis\Core\LowerCaseTokenizerFactory.cs" />
-    <Compile Include="Analysis\Core\SimpleAnalyzer.cs" />
-    <Compile Include="Analysis\Core\StopAnalyzer.cs" />
-    <Compile Include="Analysis\Core\StopFilter.cs" />
-    <Compile Include="Analysis\Core\StopFilterFactory.cs" />
-    <Compile Include="Analysis\Core\TypeTokenFilter.cs" />
-    <Compile Include="Analysis\Core\TypeTokenFilterFactory.cs" />
-    <Compile Include="Analysis\Core\UpperCaseFilter.cs" />
-    <Compile Include="Analysis\Core\UpperCaseFilterFactory.cs" />
-    <Compile Include="Analysis\Core\WhitespaceAnalyzer.cs" />
-    <Compile Include="Analysis\Core\WhitespaceTokenizer.cs" />
-    <Compile Include="Analysis\Core\WhitespaceTokenizerFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\ASCIIFoldingFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\ASCIIFoldingFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\CapitalizationFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\CapitalizationFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\CodepointCountFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\CodepointCountFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\EmptyTokenStream.cs" />
-    <Compile Include="Analysis\Miscellaneous\HyphenatedWordsFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\HyphenatedWordsFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\KeepWordFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\KeepWordFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\KeywordMarkerFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\KeywordMarkerFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\KeywordRepeatFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\KeywordRepeatFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\LengthFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\LengthFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\LimitTokenCountAnalyzer.cs" />
-    <Compile Include="Analysis\Miscellaneous\LimitTokenCountFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\LimitTokenCountFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\LimitTokenPositionFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\LimitTokenPositionFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\Lucene47WordDelimiterFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\PatternAnalyzer.cs" />
-    <Compile Include="Analysis\Miscellaneous\PatternKeywordMarkerFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\PerFieldAnalyzerWrapper.cs" />
-    <Compile Include="Analysis\Miscellaneous\PrefixAndSuffixAwareTokenFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\PrefixAwareTokenFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\RemoveDuplicatesTokenFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\RemoveDuplicatesTokenFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\ScandinavianFoldingFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\ScandinavianFoldingFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\ScandinavianNormalizationFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\ScandinavianNormalizationFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\SetKeywordMarkerFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\SingleTokenTokenStream.cs" />
-    <Compile Include="Analysis\Miscellaneous\StemmerOverrideFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\StemmerOverrideFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\TrimFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\TrimFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\TruncateTokenFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\TruncateTokenFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\WordDelimiterFilter.cs" />
-    <Compile Include="Analysis\Miscellaneous\WordDelimiterFilterFactory.cs" />
-    <Compile Include="Analysis\Miscellaneous\WordDelimiterIterator.cs" />
-    <Compile Include="Analysis\Ngram\EdgeNGramFilterFactory.cs" />
-    <Compile Include="Analysis\Ngram\EdgeNGramTokenFilter.cs" />
-    <Compile Include="Analysis\Ngram\EdgeNGramTokenizer.cs" />
-    <Compile Include="Analysis\Ngram\EdgeNGramTokenizerFactory.cs" />
-    <Compile Include="Analysis\Ngram\Lucene43EdgeNGramTokenizer.cs" />
-    <Compile Include="Analysis\Ngram\Lucene43NGramTokenizer.cs" />
-    <Compile Include="Analysis\Ngram\NGramFilterFactory.cs" />
-    <Compile Include="Analysis\Ngram\NGramTokenFilter.cs" />
-    <Compile Include="Analysis\Ngram\NGramTokenizer.cs" />
-    <Compile Include="Analysis\Ngram\NGramTokenizerFactory.cs" />
-    <Compile Include="Analysis\Path\PathHierarchyTokenizer.cs" />
-    <Compile Include="Analysis\Path\PathHierarchyTokenizerFactory.cs" />
-    <Compile Include="Analysis\Path\ReversePathHierarchyTokenizer.cs" />
-    <Compile Include="Analysis\Pattern\PatternCaptureGroupFilterFactory.cs" />
-    <Compile Include="Analysis\Pattern\PatternCaptureGroupTokenFilter.cs" />
-    <Compile Include="Analysis\Pattern\PatternReplaceCharFilter.cs" />
-    <Compile Include="Analysis\Pattern\PatternReplaceCharFilterFactory.cs" />
-    <Compile Include="Analysis\Pattern\PatternReplaceFilter.cs" />
-    <Compile Include="Analysis\Pattern\PatternReplaceFilterFactory.cs" />
-    <Compile Include="Analysis\Pattern\PatternTokenizer.cs" />
-    <Compile Include="Analysis\Pattern\PatternTokenizerFactory.cs" />
-    <Compile Include="Analysis\Payloads\AbstractEncoder.cs" />
-    <Compile Include="Analysis\Payloads\DelimitedPayloadTokenFilter.cs" />
-    <Compile Include="Analysis\Payloads\DelimitedPayloadTokenFilterFactory.cs" />
-    <Compile Include="Analysis\Payloads\FloatEncoder.cs" />
-    <Compile Include="Analysis\Payloads\IdentityEncoder.cs" />
-    <Compile Include="Analysis\Payloads\IntegerEncoder.cs" />
-    <Compile Include="Analysis\Payloads\NumericPayloadTokenFilter.cs" />
-    <Compile Include="Analysis\Payloads\NumericPayloadTokenFilterFactory.cs" />
-    <Compile Include="Analysis\Payloads\PayloadEncoder.cs" />
-    <Compile Include="Analysis\Payloads\PayloadHelper.cs" />
-    <Compile Include="Analysis\Payloads\TokenOffsetPayloadTokenFilter.cs" />
-    <Compile Include="Analysis\Payloads\TokenOffsetPayloadTokenFilterFactory.cs" />
-    <Compile Include="Analysis\Payloads\TypeAsPayloadTokenFilter.cs" />
-    <Compile Include="Analysis\Payloads\TypeAsPayloadTokenFilterFactory.cs" />
-    <Compile Include="Analysis\Position\PositionFilter.cs" />
-    <Compile Include="Analysis\Position\PositionFilterFactory.cs" />
-    <Compile Include="Analysis\Query\QueryAutoStopWordAnalyzer.cs" />
-    <Compile Include="Analysis\Reverse\ReverseStringFilter.cs" />
-    <Compile Include="Analysis\Reverse\ReverseStringFilterFactory.cs" />
-    <Compile Include="Analysis\Shingle\ShingleAnalyzerWrapper.cs" />
-    <Compile Include="Analysis\Shingle\ShingleFilter.cs" />
-    <Compile Include="Analysis\Shingle\ShingleFilterFactory.cs" />
-    <Compile Include="Analysis\Sinks\DateRecognizerSinkFilter.cs" />
-    <Compile Include="Analysis\Sinks\TeeSinkTokenFilter.cs" />
-    <Compile Include="Analysis\Sinks\TokenRangeSinkFilter.cs" />
-    <Compile Include="Analysis\Sinks\TokenTypeSinkFilter.cs" />
-    <Compile Include="Analysis\Standard\ClassicAnalyzer.cs" />
-    <Compile Include="Analysis\Standard\ClassicFilter.cs" />
-    <Compile Include="Analysis\Standard\ClassicFilterFactory.cs" />
-    <Compile Include="Analysis\Standard\ClassicTokenizer.cs" />
-    <Compile Include="Analysis\Standard\ClassicTokenizerFactory.cs" />
-    <Compile Include="Analysis\Standard\ClassicTokenizerImpl.cs" />
-    <Compile Include="Analysis\Standard\StandardAnalyzer.cs" />
-    <Compile Include="Analysis\Standard\StandardFilter.cs" />
-    <Compile Include="Analysis\Standard\StandardFilterFactory.cs" />
-    <Compile Include="Analysis\Standard\StandardTokenizer.cs" />
-    <Compile Include="Analysis\Standard\StandardTokenizerFactory.cs" />
-    <Compile Include="Analysis\Standard\StandardTokenizerImpl.cs" />
-    <Compile Include="Analysis\Standard\StandardTokenizerInterface.cs" />
-    <Compile Include="Analysis\Standard\UAX29URLEmailAnalyzer.cs" />
-    <Compile Include="Analysis\Standard\UAX29URLEmailTokenizer.cs" />
-    <Compile Include="Analysis\Standard\UAX29URLEmailTokenizerFactory.cs" />
-    <Compile Include="Analysis\Synonym\FSTSynonymFilterFactory.cs" />
-    <Compile Include="Analysis\Synonym\SolrSynonymParser.cs" />
-    <Compile Include="Analysis\Synonym\SynonymFilter.cs" />
-    <Compile Include="Analysis\Synonym\SynonymFilterFactory.cs" />
-    <Compile Include="Analysis\Synonym\SynonymMap.cs" />
-    <Compile Include="Analysis\Synonym\WordnetSynonymParser.cs" />
-    <Compile Include="Analysis\Util\AbstractAnalysisFactory.cs" />
-    <Compile Include="Analysis\Util\AnalysisSPILoader.cs" />
-    <Compile Include="Analysis\Util\CharacterUtils.cs" />
-    <Compile Include="Analysis\Util\CharArrayIterator.cs" />
-    <Compile Include="Analysis\Util\CharArrayMap.cs" />
-    <Compile Include="Analysis\Util\CharArraySet.cs" />
-    <Compile Include="Analysis\Util\CharFilterFactory.cs" />
-    <Compile Include="Analysis\Util\CharTokenizer.cs" />
-    <Compile Include="Analysis\Util\ClasspathResourceLoader.cs" />
-    <Compile Include="Analysis\Util\ElisionFilter.cs" />
-    <Compile Include="Analysis\Util\ElisionFilterFactory.cs" />
-    <Compile Include="Analysis\Util\FilesystemResourceLoader.cs" />
-    <Compile Include="Analysis\Util\FilteringTokenFilter.cs" />
-    <Compile Include="Analysis\Util\MultiTermAwareComponent.cs" />
-    <Compile Include="Analysis\Util\OpenStringBuilder.cs" />
-    <Compile Include="Analysis\Util\ResourceLoader.cs" />
-    <Compile Include="Analysis\Util\ResourceLoaderAware.cs" />
-    <Compile Include="Analysis\Util\RollingCharBuffer.cs" />
-    <Compile Include="Analysis\Util\SegmentingTokenizerBase.cs" />
-    <Compile Include="Analysis\Util\StemmerUtil.cs" />
-    <Compile Include="Analysis\Util\StopwordAnalyzerBase.cs" />
-    <Compile Include="Analysis\Util\TokenFilterFactory.cs" />
-    <Compile Include="Analysis\Util\TokenizerFactory.cs" />
-    <Compile Include="Analysis\Util\WordlistLoader.cs" />
-    <Compile Include="Analysis\Wikipedia\WikipediaTokenizer.cs" />
-    <Compile Include="Analysis\Wikipedia\WikipediaTokenizerFactory.cs" />
-    <Compile Include="Collation\CollationAttributeFactory.cs" />
-    <Compile Include="Collation\CollationKeyAnalyzer.cs" />
-    <Compile Include="Collation\CollationKeyFilter.cs" />
-    <Compile Include="Collation\CollationKeyFilterFactory.cs" />
-    <Compile Include="Collation\TokenAttributes\CollatedTermAttributeImpl.cs" />
+    <Compile Include="Analysis\Util\CharacterUtils.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
