--- a/src/Lucene.Net.Analysis.Common/packages.config
+++ b/src/Lucene.Net.Analysis.Common/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ICU4C-55.1-bin32" version="1.0.2" targetFramework="net451" />
-  <package id="ICU4NET" version="0.0.2" targetFramework="net451" />
+  <package id="ICU4NET-ICU4C55.1-bin32" version="1.0.0" targetFramework="net451" />
 </packages>
