--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -51,6 +51,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Analysis\Util\ICharacterIterator.cs" />
+    <Compile Include="Analysis\Util\RollingCharBuffer.cs" />
+    <Compile Include="Analysis\Util\SegmentingTokenizerBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
