fix build on mono/linux where files names are case senstive

--- a/src/Lucene.Net.Tests.Codecs/Lucene.Net.Codecs.Tests.csproj
+++ b/src/Lucene.Net.Tests.Codecs/Lucene.Net.Codecs.Tests.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="diskdv\TestDiskDocValuesFormat.cs" />
+    <Compile Include="DiskDv\TestDiskDocValuesFormat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
