--- a/src/Lucene.Net.Core/packages.config
+++ b/src/Lucene.Net.Core/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net451" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net40-Client" />
 </packages>
