Ported StopFilter + tests (except those that depend on StopAnalyzer).

--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Analysis\Core\LowerCaseFilter.cs" />
     <Compile Include="Analysis\Core\LowerCaseTokenizer.cs" />
     <Compile Include="Analysis\Core\SimpleAnalyzer.cs" />
+    <Compile Include="Analysis\Core\StopFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\ASCIIFoldingFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\EmptyTokenStream.cs" />
     <Compile Include="Analysis\Miscellaneous\HyphenatedWordsFilter.cs" />
